# goldrush

./: main.py  pyproject.toml
src/goldrush/: constants.py  main.py
src/goldrush/core/: engine.py  scene_mgr.py
src/goldrush/scenes/: base.py  characters.py  home.py  settings.py  stage_map.py  title.py
src/goldrush/ui/: base.py  button.py  dialog.py
