[project]
name = "goldrush"
version = "0.1.0"
description = "Goldrush: A retro-style game powered by Pyxel."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pyxel>=2.8.8"]

[dependency-groups]
dev = ["ruff>=0.15.7"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle (Error)
  "W",   # pycodestyle (Warning)
  "F",   # Pyflakes
  "I",   # isort (Import順)
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "N",   # pep8-naming
  "A",   # flake8-builtins
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # テストコードでのassert許容
"__init__.py" = ["F401"]   # 未使用インポート許容

[tool.ruff.lint.isort]
known-first-party = ["goldrush"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
